syntax = "proto3";
import "common/common.proto";

option java_multiple_files = true;
option java_package = "com.sat.grpcmodels";

/*
  This is my proto file comments.
  To generate javascript files use from protobuf/src/main/proto dir
  $../../../target/protoc-plugins/protoc-3.21.7-linux-x86_64.exe --js_out=<present dir> *.proto -- This didn't ran
  $./target/protoc-plugins/protoc-3.21.7-linux-x86_64.exe --python_out=./src/main/proto/ <path>proto -- This ran
 */
message Person {
  // Name Field comment
  string name = 1;
  // Age integer field.
  int32 age = 2;
  common.Address address = 3;
  repeated common.Car car = 4;
}

message Todo {
  int32 id = 1;
  string title = 2;
  bool completed = 3;
}
message GetTodoByIdRequest {
  int32 id = 1;
}
service TodoService {
  rpc getTodo(GetTodoByIdRequest) returns (Todo);
  rpc getTodoStream(GetTodoByIdRequest) returns ( stream Todo);
}



